# ntfl

./: .gitignore  Cargo.toml  build.rs
src/: draw.rs  fw.rs  inst.rs  lib.rs  ncurses.rs  scr.rs  window.rs
