[package]
name = "ntfl"
version = "0.1.0"
authors = [ "Warlock <internalmike@gmail.com>" ]
description = "A TUI library"
repository = "https://github.com/A1-Triard/ntfl"
readme = "README.md"
keywords = ["ncurses", "TUI"]
license = "Apache"
build = "build.rs"

[build-dependencies]
gcc = "0.3"
pkg-config = "0.3"

[dependencies]
libc = "0.2"
either = "1.5.0"

[lib]
name = "ntfl"
